Fix bottom alignment on smaller screen

--- a/style.css
+++ b/style.css
@@ -101,7 +101,8 @@ h2 {
     flex-direction: column;
     align-items: center;
     text-align: center;
-     min-height: 100vh;
+     min-height: 90vh;
+     height: auto;
 }
 
 #animations h2 {
